--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Wed May 04 10:17:13 ICT 2011
+#Fri May 13 09:56:43 ICT 2011
 eclipse.preferences.version=1
-include_path=0;/DTUI
+include_path=0;/dtui
