--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-#Sat May 14 02:24:36 ICT 2011
-=======
-#Fri May 13 09:56:43 ICT 2011
->>>>>>> upstream/master
+#Wed May 04 10:17:13 ICT 2011
 eclipse.preferences.version=1
-include_path=0;/dtui
+include_path=0;/DTUI
